UI: Improve mobile view of products page and fix horizontal scrolling issue

--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -21,6 +21,7 @@
 
 .aboutSection {
     background-color: white;
+    overflow: hidden;
 }
 
 .storyContent {
@@ -74,6 +75,7 @@
 
 .infraSection {
     background-color: var(--color-earth-200);
+    overflow: hidden;
 }
 
 .infraCard {
